# plp21

./: README.md
Code/CUDA/: app.cu
Code/CUDA/Simple_App/: app.cu
Code/Cpp/Array/: main.cpp
Code/Cpp/Hello_CMake_World/: CMakeLists.txt  helloworld.cpp
Code/Cpp/Hello_World/: Makefile
Code/Cpp/Lib/: 02-main.cpp  Makefile
Code/Cpp/Lib/02-lib-folder/: 02-lib.cpp
Code/Cpp/Lib_CMake/: 02-main.cpp  CMakeLists.txt
Code/Cpp/Lib_CMake/02-lib-folder/: 02-lib.cpp  02-lib.h
Code/OMP/: array-omp.c  array-par.cpp  array-template.cpp  array_par.c  barrier.cpp  datasharing.cpp  hello_openmp_world.cpp  hello_openmp_world_with_lib.cpp  pi_montecarlo-omp-for.c  reduction.cpp
Code/PThreads/: ex_producer_consumer  ex_producer_consumer.c  ex_sem  ex_sem-template.c  ex_sem.c  hello_pthreads_world  hello_pthreads_world.c  loop_partition.c  mean_reduce.c
